--- a/css/style.css
+++ b/css/style.css
@@ -38,12 +38,17 @@ body {
     padding-left: 17px;
     border: none;
     font-size: 18px;
-    font-weight: 400;
+    font-weight: 700;
     background-color: #E7E7E7;
     position: relative;
     cursor: pointer;
     outline: none;
 }
+/* .searchbar_input::placeholder {
+    font-size: 18px;
+    color: white;
+    font-weight: 700;
+} */
 
 .searchbar_input[type="search"]::-webkit-search-cancel-button {
     display: none;
@@ -107,21 +112,62 @@ body {
     top: 0px;
     border-radius: 5px;
     color: white;
+    font-weight: 700;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     align-items: center;
+    padding-right: 20px;
 
 }
-.dropdown-ingredients {
+.dropdown-bl:nth-child(1) {
     background-color: #3282F7;
 }
-.dropdown-appliance {
+.dropdown-bl:nth-child(2) {
     background-color: #68D9A4;
-
+}
+.dropdown-bl:nth-child(3) {
+    background-color: #ED6454;
+}
+input::placeholder {
+    font-size: 18px;
+    color: white;
+    font-weight: 700;
+}
+input:focus::-webkit-input-placeholder {
+    color: #E7E7E7;
+}
+input {
+    width: 100%;
+    background-color: transparent;
+    font-size: 18px;
+    padding-left: 20px;
+    color: white;
+    font-weight: 700;
+    outline: none;
+    border: none;
+}
+.dropdown-ingredients {
+    display: flex;
+}
+.dropdown-appliance {
+    display: flex;
 }
 .dropdown-ustensils {
-    background-color: #ED6454;
+    display: flex;
+}
 
+@keyframes dropdown {
+    
+    0% {
+      width: 170px;
+    }
+    100% {
+      width: 250px;
+    }
+}
+.fas {
+    font-weight: 700;
+    font-size: 24px;
 }
 
 /* recipes section ************************************************************** */
