--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ input {
     height: 69px;
     width: 100%;
 }
-.dropdown-appliance {
+.dropdown-appliances {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -200,7 +200,7 @@ input {
     grid-template-columns: 1fr 1fr 1fr;
     grid-row: 10;
     width: 100%;
-    background-color: #3282F7;
+    /* background-color: #3282F7; */
     list-style: none;
     padding-left: 20px;
     position: absolute;
@@ -216,6 +216,15 @@ input {
     overflow: scroll;
     max-height: 640px ;
 
+}
+.menu-blue {
+    background-color: #3282F7;
+}
+.menu-green {
+    background-color: #68D9A4;
+}
+.menu-red {
+    background-color: #ED6454;
 }
 .tags > li:hover {
     background-color: rgb(6, 62, 147, 0.3);
