--- a/css/style.css
+++ b/css/style.css
@@ -66,6 +66,12 @@ body {
     cursor: pointer;
 }
 
+.message-error {
+    display: none;
+    color: red;
+
+}
+
 /* *********************************************************************** */
 
 /* tag section ************************************************************** */
@@ -223,9 +229,19 @@ input {
 .menu-green {
     background-color: #68D9A4;
 }
+.tag-red {
+    background-color: #ED6454;
+}
+.tag-blue {
+    background-color: #3282F7;
+}
+.tag-green {
+    background-color: #68D9A4;
+}
 .menu-red {
     background-color: #ED6454;
 }
+
 .tags > li:hover {
     background-color: rgb(6, 62, 147, 0.3);
     /* filter: brightness(150%); */
