--- a/css/style.css
+++ b/css/style.css
@@ -29,8 +29,12 @@ body {
     justify-content: space-between;
     align-items: center;
     border-radius: 5px;
+    transition: box-shadow .2s;
 
 }
+/* .searchbar:hover {
+    box-shadow: 0 0 11px rgba(33,33,33,.3);
+} */
 .searchbar_input {
     width: 100%;
     height: 100%;
@@ -76,6 +80,9 @@ body {
 
 /* tag section ************************************************************** */
 
+.tag {
+    cursor: pointer;
+}
 .tag-section {
     margin-top: 20px ;
     margin-bottom: 20px ;
@@ -102,8 +109,13 @@ body {
     padding-right: 10px;
 
 }
+.btn-tag:hover {
+    box-shadow: 0 0 11px rgba(33,33,33,.5);
+}
 .fa-times-circle {
     font-size: 18px;
+    cursor: pointer;
+
 }
 
 /* ************************************************************** */
@@ -130,6 +142,13 @@ body {
     position: relative;
     z-index: 1;
     box-sizing: content-box;
+    transition: box-shadow .2s;
+
+    /* animation: dropdown 0.3s both ; */
+
+}
+.dropdown-bl:hover {
+    box-shadow: 0 0 11px rgba(33,33,33,.5);
 
 }
 
@@ -148,9 +167,9 @@ input::placeholder {
     color: white;
     font-weight: 700;
 }
-input:hover::-webkit-input-placeholder {
+/* input:hover::-webkit-input-placeholder {
     color: #E7E7E7;
-}
+} */
 input:focus::-webkit-input-placeholder {
     color: #E7E7E7;
 }
@@ -187,15 +206,32 @@ input {
 
 }
 
+.fa-angle-up:hover, .fa-angle-down:hover {
+transform: scale(1.3);
+transition: 0.1s;
+}
+
+/*Animation effets dropdown **************************************/
 @keyframes dropdown {
     
     0% {
       width: 170px;
     }
     100% {
-      width: 250px;
+      width: 600px;
     }
 }
+@keyframes dropdown-reverse {
+    
+    0% {
+      width: 600px;
+    }
+    100% {
+      width: 170px;
+    }
+}
+/*******************************************************/
+
 .fas {
     font-weight: 700;
     font-size: 24px;
@@ -278,7 +314,29 @@ input {
     display: flex;
     flex-direction: column;
     animation: displaycard 0.3s both ;
+    cursor: pointer;
+    transition: box-shadow .3s;
 }
+.recipes-card:hover {
+    box-shadow: 0 0 11px rgba(33,33,33,.3); 
+}
+/* .recipes-card::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    width: 100%;
+    border-radius: 5px;
+    background-color: gray;
+    opacity: 0%;
+    z-index: 1;
+}
+.recipes-card:hover::after {
+    opacity: 10%;
+} */
+
 @keyframes displaycard {
     
         from {
