--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,3 @@
-html {
-    margin-left: 200px;
-    margin-right: 200px;
-    min-width: 1080px;
-}
 body {
     margin: 0;
     font-family: Lato;
@@ -19,7 +14,11 @@ body {
     height: 93px;
     width: 268px;
 }
-
+main {
+    margin-left: 10%;
+    margin-right: 10%;
+    min-width: 1080px;
+}
 /* Searchbar ************************************************************** */
 .searchbar {
     height: 69px;
@@ -123,6 +122,8 @@ body {
 
 .dropdown-section {
     display: flex;
+    flex-wrap: wrap;
+    width: 100%;
     gap: 20px;
     z-index: 1;
     position: relative;
@@ -304,8 +305,8 @@ transition: 0.1s;
 /* recipes card ************************************************************* */
 
 .recipes-card {
-    /* height: 364px; */
-    min-width: 30%;
+    /* min-height: 400px;
+    min-width: 30%; */
     aspect-ratio: 1/1;
     border-radius: 5px;
     background-color: antiquewhite;
